--- a/app.json
+++ b/app.json
@@ -5,14 +5,14 @@
     "env": {
         "ID": {
             "description": "UUID",
-            "value": "ad806487-2d26-4636-98b6-ab85cc8521f7"
+            "value": "0e6007f8-f735-4cee-936b-94265919f7ab"
         },
         "WSPATH": {
             "description": "WebSocket Path",
             "value": "/"
         }
     },
-    "website": "https://ibcl.us/Heroku-V2Ray_20191014/",
-    "repository": "https://github.com/bclswl0827/v2ray-heroku/tree/vless",
+    "website": "https://bbs.111111.online/",
+    "repository": "https://github.com/kudarant/xpath/tree/vless",
     "stack": "container"
 }
